<resources>
    <string name="app_name">MediControl</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="email_hint">seu@email.com</string>
    <string name="prompt_password">Senha</string>
    <string name="password_hint">senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_register"><u>Faça seu cadastro</u></string>
    <string name="name">Nome</string>
    <string name="your_name">seu nome</string>
    <string name="gender">Sexo</string>
    <string name="birthday">Nascimento</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="register">Cadastrar</string>
    <string name="cancel">Cancelar</string>
    <string name="date_hint">dd/mm/aaaa</string>
    <string name="msg_sucesso">Operação concluída com sucesso</string>
    <string name="msg_falha">Erro ao executar a operação</string>
    <string name="msg_cancelado">Operação cancelada</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">A senha deve ter, pelo menos, 6 caracteres</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lbl_welcome">Bem vindo, %1$s</string>
    <string name="lbl_ultimo_acesso">Último acesso em %1$s</string>
    <string name="lbl_import">Importar</string>
    <string name="lbl_galery">Galeria</string>
    <string name="lbl_slideshow">Slideshow</string>
    <string name="lbl_tools">Ferramentas</string>
    <string name="lbl_communicate">Social</string>
    <string name="lbl_share">Compartilhar</string>
    <string name="lbl_send">Enviar</string>
    <string name="lbl_sair">Sair</string>
    <string name="lbl_foto">Foto</string>
    <string name="lbl_sample_email">foo@foo.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_alarmadd">Adicionar alarme</string>
    <string name="lbl_alarmacess">Acessar alarmes</string>
    <string name="lbl_amigoadd">Adicionar amigo</string>
    <string name="lbl_amigos">Lista de amigos</string>
    <string name="nome_do_alarme">Nome do alarme</string>
    <string name="complemento">Complemento</string>
    <string name="ex_complemento">Ex.: 500 mg</string>
    <string name="hora_de_inicio">Hora de início</string>
    <string name="ex_inicio">Ex.: 18:00</string>
    <string name="frequencia">Frequência</string>
    <string name="ex_frequencia">Ex.: 3</string>

    //Strings da validação de cadastro dos alarmes
    <string name="nome_incorreto">Por favor preencha o campo</string>
    <string name="quantidade_de_dias">Quantidade de dias</string>
    <string name="ex_dias">Ex.: 4</string>
    <string name="buscar">Buscar</string>
    <string name="resultado">RESULTADO</string>
    <string name="amigos">Amigos</string>
    <string name="status_amizade">Status:</string>
    <string name="atualizar">Atualizar</string>
    <string name="remove">Remover</string>

</resources>
