<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add_alarme"
            android:icon="@drawable/ic_baseline_add_alarm_24px"
            android:title="@string/lbl_alarmadd" />
        <item
            android:id="@+id/nav_lista_alarmes"
            android:icon="@drawable/ic_baseline_access_alarms_24px"
            android:title="@string/lbl_alarmacess" />
        <item
            android:id="@+id/nav_add_amigo"
            android:icon="@drawable/ic_baseline_person_add_24px"
            android:title="@string/lbl_amigoadd" />
        <item
            android:id="@+id/nav_lista_amigos"
            android:icon="@drawable/ic_baseline_group_24px"
            android:title="@string/lbl_amigos" />
    </group>

    <item android:title="@string/lbl_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/lbl_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lbl_send" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/lbl_sair" />

</menu>
